--- a/DoBest.html
+++ b/DoBest.html
@@ -22,7 +22,8 @@
         <img src="./素材圖庫/Arrow - Up Square.png" alt="">
       </div>
     </a>
-    <!--   -------------------------- 頁首------------------------------------------------------- -->
+    <!--   -------------------------- 頁首--------------------------------------------------------- -->
+    <div></div>
     <div id="nav-bar-outside" class="col-12 d-flex justify-content-center fixed-top bg-body user-select-none ">
       <!-- toggle-area 菜單------------------- -->
       <div class="toggle-area d-none d-md-flex" id="menu">
